Flesh out the solara notebook

--- a/04c_solara.ipynb
+++ b/04c_solara.ipynb
@@ -6,21 +6,371 @@
    "source": [
     "# Introducing Solara\n",
     "\n",
-    "After doing all this work, we should also review another approach to the entire problem of developing web apps with Python. This approach is called Solara, and it is a Python library that allows you to create web applications using Python code only. This is a very interesting approach, as it allows you to create web applications without having to write any HTML, CSS, or JavaScript code. In this notebook, we will introduce Solara and show you how to create a simple web application using it.\n",
-    "\n",
-    "\n",
-    "## TO DO IN THIS NOTEBOOK\n",
-    "- [ ] Make sure what was GitHub Copilot generated above is actually accurate\n",
-    "- [ ] Introduce Solara and its approach to developing web apps\n",
-    "- [ ] Show how to recreate our dashboard using Solara (if easy enough)"
+    "After doing all this work, we should also review another approach to the entire problem of developing web apps with Python. This approach is called Solara, and it is a Python library that allows you to create web applications using Python code only. This is a very interesting approach, as it allows you to create web applications without having to write any HTML, CSS, or JavaScript code. In this notebook, we will introduce Solara and show you how to create a simple web application using it.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "import solara\n",
+    "from ipydatagrid import DataGrid\n",
+    "from matplotlib.figure import Figure\n",
+    "from matplotlib import pyplot as plt\n",
+    "from scipy.signal import savgol_filter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read the data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = 'data'\n",
+    "DATA_FILE = 'land-ocean-temp-index.csv'\n",
+    "\n",
+    "original_df = pd.read_csv(Path(DATA_DIR) / DATA_FILE, escapechar='#')\n",
+    "year_range_input = (min(original_df[\"Year\"]), max(original_df[\"Year\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up the *reactive* variables and controls\n",
+    "\n",
+    "These allow solara to handle updating controls as values change."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reactive variables for the controls\n",
+    "\n",
+    "The cell below defines three *reactive* variables. These are variables whose changes will be monitored for\n",
+    "changes by solara. Variables defined with `solara.reactive` are typically global variables used to manage the state of the application. It is possible to define reactive variables that are local to a function by using `solara.use_state` or `solar.use_reactive`.\n",
+    "\n",
+    "The argument to `solara.reactive` is the initial value of the variable. That initial value can have any type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_range = solara.reactive(year_range_input)\n",
+    "window_size = solara.reactive(2)\n",
+    "polynomial_order = solara.reactive(1)\n",
+    "\n",
+    "# Print one of the values -- just like for an ipywidgete you use .value\n",
+    "print(year_range.value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solara components for controls\n",
+    "\n",
+    "The cell below defines, in one function, a column of controls: 3 sliders, one for `year_range`, one for `window_size` and one for `polynomial_order`.\n",
+    "\n",
+    "*Components* are the building blocks out of which a solara application is built. You can make a function you write a component in solara by using the decorator `@solara.component`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we define our own component, called controls. A component can take arguments, \n",
+    "# though this one does not.\n",
+    "@solara.component\n",
+    "def controls():\n",
+    "    \"\"\"\n",
+    "    This panel contains the year_range, window_size and polynomial_order controls.\n",
+    "    \"\"\"\n",
+    "    # solar.Column() is another component defined in solara itself. Everything in the \n",
+    "    # with block is arranged in a column.\n",
+    "    with solara.Column() as crtl:\n",
+    "        # SliderRangeInt is another solara component\n",
+    "        solara.SliderRangeInt(\n",
+    "            \"Range of years\", \n",
+    "            # The line below is key -- it connects the slider to the reactive variable year_range\n",
+    "            value=year_range, \n",
+    "            min=year_range_input[0],\n",
+    "            max=year_range_input[1],\n",
+    "        )\n",
+    "    \n",
+    "        solara.SliderInt(\n",
+    "            \"Window size\",\n",
+    "            # Link this slider to window_size\n",
+    "            value=window_size,\n",
+    "            min=2,\n",
+    "            max=100\n",
+    "        )\n",
+    "        solara.SliderInt(\n",
+    "            \"Polynomial order\",\n",
+    "            # Link this slider to polynomial_order\n",
+    "            value=polynomial_order,\n",
+    "            min=1,\n",
+    "            max=10\n",
+    "        )\n",
+    "    # If there is a single displayable component in the function then solara will display that,\n",
+    "    # otherwise it renders the return value.\n",
+    "    return crtl\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Another component for limiting polynomial order\n",
+    "\n",
+    "The component below does not display anything on the screen. Instead, it checks for consistency between the `window_size` and `polynomial_order`. Because we have defined both of those as *reactive* variables, solara will automatically call this component, as long as we include a call to it in one of the components is displayed. We'll put that call in our \"main\" dashboard below, but it could be worked into the definition of our controls instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Registering as a component ensures this is called when either reactive variable's \n",
+    "# value changes.\n",
+    "@solara.component\n",
+    "def check_poly_order():\n",
+    "    if polynomial_order.value > 10 or polynomial_order.value >= window_size.value:\n",
+    "        polynomial_order.value = min(window_size.value - 1, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reactive variables and components for the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The argument of `solara.reactive` can be anything, including a Pandas data frame. Declaring this as reactive ensures that solara responds when the selected data changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_df = solara.reactive(original_df.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The component below also does not display any data. The only thing it does is calculate a smoothing column and update `selected_df`. This will automatically be called when `year_range`, `window_size` or `polynomial_order` changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@solara.component \n",
+    "def selected_data():\n",
+    "    \"\"\"\n",
+    "    This component only updates the selected data. Since selected_df is a reactive \n",
+    "    variable, any component which 1) uses selected_df and 2) is rendered in a UI component\n",
+    "    will automatically be updated.\n",
+    "    \"\"\"\n",
+    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "                                                 window_size.value,\n",
+    "                                                 polynomial_order.value).round(decimals=3)\n",
+    "    selected_df.value = original_df[(original_df['Year'] >= year_range.value[0])\n",
+    "                               & (original_df['Year'] <= year_range.value[1])]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make the plot\n",
+    "\n",
+    "Either the pyplot or object interface to matplotlib can be used. If pyplot is used, then the plot should be closed after drawing it so that you do not end up with a bunch of open (but inaccessible) plots.\n",
+    "\n",
+    "Since we declared `selected_df` as a reactive variable, the plot is redrawn whenever its value changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@solara.component\n",
+    "def draw_plot():\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "    plt.title('Global Annual Mean Surface Air Temperature Change')\n",
+    "\n",
+    "    plt.plot(selected_df.value['Year'], selected_df.value['Temperature'], label='Raw Data')\n",
+    "    plt.plot(selected_df.value['Year'], selected_df.value['Smoothed Data'], label='Smoothed Data')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the dashboard\n",
+    "\n",
+    "In the cell below we define the dashboard. We could call it anything we want, but when running it as a dashboard using `solara-server` if there is an object called `Page`, then that is what will be rendered in the browser.\n",
+    "\n",
+    "The overall layout will have one row with two columns. The first column has the controls and the second column has the data and graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@solara.component\n",
+    "def Page():\n",
+    "    # These first two components are called here so that solara knows it should call them \n",
+    "    # when changes occur in any of the reactive variables used in those components.\n",
+    "    check_poly_order()\n",
+    "    selected_data()\n",
+    "    \n",
+    "    # We make a row, which will end up with two columns \n",
+    "    with solara.Row():\n",
+    "        # Here we define the left column and restrict its width to 500px.\n",
+    "        with solara.Column(style=dict(width=\"500px\")):\n",
+    "            # Get some extra space at the top...\n",
+    "            solara.Text(\"\\n\\n\")\n",
+    "            # Here we use the controls component we defined above.\n",
+    "            controls()\n",
+    "        # Make column 2 with the data and graph. This column will use whatever space\n",
+    "        # is available that the first column doesn't use.\n",
+    "        with solara.Column():\n",
+    "            # Display the data. The Details component is a collapsible component sort of like\n",
+    "            # an according. Its child is an ipydatagrid.DataGrid, like we used previously.\n",
+    "            # There is another option built in to solara called solara.DataFrame with similar \n",
+    "            # functionality.\n",
+    "            solara.Details(\n",
+    "                summary=\"Click to show data\",\n",
+    "                children=[DataGrid(selected_df.value)]\n",
+    "            )\n",
+    "            # This draws the plot. Solara undestands that this needs to be redrawn whenever selected_df\n",
+    "            # changes.\n",
+    "            draw_plot()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display the dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Page()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Be careful, solara can be an effective foot gun\n",
+    "\n",
+    "See if you can spot the error in the code below -- why doesn't the range slider behave as expected?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_range_ex2 = solara.reactive((1880, 2023))\n",
+    "\n",
+    "@solara.component\n",
+    "def BadSlider():\n",
+    "    solara.SliderRangeInt(\n",
+    "        \"Some integer range\", \n",
+    "        value=year_range_ex2, \n",
+    "        min=year_range_ex2.value[0], \n",
+    "        max=year_range_ex2.value[1],\n",
+    "        tick_labels=True,\n",
+    "        step=5\n",
+    "    )\n",
+    "\n",
+    "BadSlider()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "1. Add the text widgets from the dashboard to this solara example. Use the [solara `HTML` component](https://solara.dev/documentation/components/output/html) to display the text.\n",
+    "2. Improve the controls consistency check. The window size should really be at least one less than the range of years displayed. In other words, it does not make sense to use a window size of 100 if you are only displaying 50 years of data. It does not crash here when you do that because the smoothed column is called from the full data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
