Add standard notebook intro and nbdev exports

--- a/04c_solara.ipynb
+++ b/04c_solara.ipynb
@@ -6,7 +6,17 @@
    "source": [
     "# Introducing Solara\n",
     "\n",
-    "After doing all this work, we should also review another approach to the entire problem of developing web apps with Python. This approach is called Solara, and it is a Python library that allows you to create web applications using Python code only. This is a very interesting approach, as it allows you to create web applications without having to write any HTML, CSS, or JavaScript code. In this notebook, we will introduce Solara and show you how to create a simple web application using it.\n"
+    "### Goal of this notebook \n",
+    "\n",
+    "After doing all this work, we should also review another approach to the entire problem of developing web apps with Python. This approach is called Solara, and it is both a Python library that allows you to create web applications using Python code only and a server to deploy those web apps.\n",
+    "\n",
+    "\n",
+    "### Steps you will take in this notebook\n",
+    "\n",
+    "1. Learn about *reactive* variables and solara *components*.\n",
+    "2. Build a version of our dashboard using solara.\n",
+    "3. Briefly discuss how a solara server differs from a voila server.\n",
+    "4. Discuss the steps to deploy a solara app on the [ploomber](https://www.platform.ploomber.io/) service.\n"
    ]
   },
   {
@@ -15,6 +25,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| default_exp main "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
@@ -38,6 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "DATA_DIR = 'data'\n",
     "DATA_FILE = 'land-ocean-temp-index.csv'\n",
     "\n",
@@ -72,10 +94,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "year_range = solara.reactive(year_range_input)\n",
     "window_size = solara.reactive(2)\n",
-    "polynomial_order = solara.reactive(1)\n",
-    "\n",
+    "polynomial_order = solara.reactive(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print one of the values -- just like for an ipywidgete you use .value\n",
     "print(year_range.value)"
    ]
@@ -97,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "# Here we define our own component, called controls. A component can take arguments, \n",
     "# though this one does not.\n",
     "@solara.component\n",
@@ -151,6 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "# Registering as a component ensures this is called when either reactive variable's \n",
     "# value changes.\n",
     "@solara.component\n",
@@ -179,6 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "selected_df = solara.reactive(original_df.copy())"
    ]
   },
@@ -195,6 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "@solara.component \n",
     "def selected_data():\n",
     "    \"\"\"\n",
@@ -226,6 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export \n",
+    "\n",
     "@solara.component\n",
     "def draw_plot():\n",
     "    plt.xlabel('Year')\n",
@@ -256,6 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "@solara.component\n",
     "def Page():\n",
     "    # These first two components are called here so that solara knows it should call them \n",
@@ -275,7 +314,7 @@
     "        # is available that the first column doesn't use.\n",
     "        with solara.Column():\n",
     "            # Display the data. The Details component is a collapsible component sort of like\n",
-    "            # an according. Its child is an ipydatagrid.DataGrid, like we used previously.\n",
+    "            # an accordian. Its child is an ipydatagrid.DataGrid, like we used previously.\n",
     "            # There is another option built in to solara called solara.DataFrame with similar \n",
     "            # functionality.\n",
     "            solara.Details(\n",
@@ -301,6 +340,24 @@
    "outputs": [],
    "source": [
     "Page()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export with nbdev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nbdev.export import nb_export\n",
+    "\n",
+    "nb_export('04c_solara.ipynb', 'dashboard_solara')"
    ]
   },
   {
