Complete example of optional smoothing

--- a/03e_more_ipyautoui_pydantic.ipynb
+++ b/03e_more_ipyautoui_pydantic.ipynb
@@ -5,20 +5,9 @@
    "id": "46efd483-a73e-43e2-ba2e-879b790fcddf",
    "metadata": {},
    "source": [
-    "# Further exploration of ipyautoui -- should this be fleshed out or dropped???\n",
+    "# Further exploration of ipyautoui\n",
     "\n",
-    "The easiest way to get a better idea of what ipyautoui can do is to try out its demo. If you have time, feel free to explore!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "165c26b6-020f-446e-afff-8d236124d12f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipyautoui import demo\n",
-    "demo()"
+    "**NOTE:** We will not export the content in this notebook to a Python module with nbdev."
    ]
   },
   {
@@ -26,9 +15,7 @@
    "id": "e380a40b-2631-41e7-a0be-f94d89d8c492",
    "metadata": {},
    "source": [
-    "# An extension: making the smoothing optional\n",
-    "\n",
-    "## More about pydantic and ipyautoui"
+    "## An extension: making the smoothing optional"
    ]
   },
   {
@@ -46,7 +33,7 @@
    "id": "8a6fdf9a-4e19-431a-9f27-59502f5c6c3b",
    "metadata": {},
    "source": [
-    "## Step 1: make the smoothing settings a separate model"
+    "### Step 1: make the smoothing settings a separate model"
    ]
   },
   {
@@ -66,6 +53,7 @@
    "source": [
     "from typing import Annotated\n",
     "\n",
+    "import ipywidgets as widgets\n",
     "from ipyautoui import AutoUi\n",
     "from pydantic import BaseModel, Field, model_validator"
    ]
@@ -110,8 +98,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui_smooth = AutoUi(SmoothingSetttings)\n",
+    "ui_smooth = AutoUi(SmoothingSettings)\n",
     "ui_smooth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24bea2e-e466-405b-8260-c6fbbe1c0741",
+   "metadata": {},
+   "source": [
+    "### Step 2: Change the model for the controls"
    ]
   },
   {
@@ -119,7 +115,19 @@
    "id": "cf984643-99d6-42bc-944f-a34fee7aab02",
    "metadata": {},
    "source": [
-    "Now we make a class to hold the controls which has two fields: `year_range` and `smoothing`. For `smoothing`, we use the union operator `|` in the type annotation to indicate that the `smoothing` can be either of type `SmoothingSettings` or can be `None`."
+    "Now we make a class to hold the controls which has two fields: `year_range` and `smoothing`. For `smoothing`, we use the union operator `|` in the type annotation to indicate that the `smoothing` can be either of type `SmoothingSettings` or can be `None`.\n",
+    "\n",
+    "To define the `year_range` properly we use the `ConstrainedInt` type we defined in a previous notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38aec221-f62d-45c4-8287-0a772daf0109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from key.dashboard_pydantic.pydantic_model import ConstrainedInt"
    ]
   },
   {
@@ -129,12 +137,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataSelector(BaseModel, validate_assignment=True):\n",
+    "class DataSelectorModel(BaseModel, validate_assignment=True):\n",
+    "    \"\"\"\n",
+    "    Controls for temperature graph.\n",
+    "\n",
+    "    👉👉👉 Replaces the DataSelectorModel in the original pydantic dashboard 👈👈👈\n",
+    "    \"\"\"\n",
     "    year_range: Annotated[\n",
-    "        tuple[int, int],\n",
-    "        Field(json_schema_extra=dict(autoui='ipywidgets.IntRangeSlider'))\n",
+    "        # The key change is in the line below\n",
+    "        tuple[ConstrainedInt, ConstrainedInt],\n",
+    "        # With this change to the type we no longer need to tell ipyautoui\n",
+    "        # what kind of widget to use. Field contains just a brief description\n",
+    "        Field(description=\"Range of years to plot\")\n",
     "    ] = (1800, 2000)\n",
-    "    smoothing: SmoothingSetttings | None"
+    "    smoothing: SmoothingSettings | None"
    ]
   },
   {
@@ -152,46 +168,209 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui_data_smooth = AutoUi(DataSelector)\n",
-    "ui_data_smooth"
+    "controls = AutoUi(DataSelector)\n",
+    "controls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d168a22-8652-4fbc-b26d-45cb213d43d1",
+   "metadata": {},
+   "source": [
+    "### Step 3: Enforce the constraint between `window_size` and `polynomial_order`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4219527-b183-4cd2-839d-8660e76ad646",
+   "metadata": {},
+   "source": [
+    "In an earlier notebook we constrained the smoothing settings so that the user could not set an invalid value. We do that again below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ca984e-fd4a-4f0a-bfea-37ffc2c96a7d",
+   "id": "02408499-6ccb-46dc-9959-fce463330962",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Force nullable fields to be shown\n",
-    "ui_data_smooth.show_null = True"
+    "from dashboard_pydantic.widgets_autoui import make_enforcer\n",
+    "controls.observe(make_enforcer(controls), \"_value\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7573cc7-287b-4130-ac6f-1e6031bb1724",
+   "metadata": {},
+   "source": [
+    "### Step 4: Revise the `DataAndPlot` class\n",
+    "\n",
+    "Since we have made a change in the way that the settings are defined we need to update the class we made holding the table and graph.\n",
+    "\n",
+    "The only new lines are indicated with this notation in the code below; the rest is unchanged from the earlier notebook.\n",
+    "\n",
+    "```python\n",
+    "# 👉👉👉 Changes to the code are indicated by this 👈👈👈\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f24ff140-1f7a-4ac7-b606-a54b441fcc28",
+   "id": "d78df45d-652f-4f18-8b5e-2c73b31265d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Force nested models to open\n",
-    "ui_data_smooth.open_nested = True"
+    "from ipydatagrid import DataGrid\n",
+    "from matplotlib import pyplot as plt\n",
+    "from scipy.signal import savgol_filter\n",
+    "import pandas as pd\n",
+    "import traitlets as tr\n",
+    "\n",
+    "class DataAndPlot(tr.HasTraits):\n",
+    "    smoothing_info = tr.Dict(allow_none=True, default=None)\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.original_data = pd.read_csv(Path(DATA_DIR) / DATA_FILE, escapechar='#')\n",
+    "        self.plot_output = widgets.Output()\n",
+    "        self.data_output = DataGrid(self.original_data, header_visibility=\"column\", auto_fit_columns=True)\n",
+    "        # 👉👉👉 New attribute to track whether smoothing is turned on   👈👈👈\n",
+    "        self.smooth = False\n",
+    "\n",
+    "    @tr.observe('smoothing_info')\n",
+    "    def select_and_plot(self, change):\n",
+    "        # 👉👉👉 Set smoothing attribute based on value from controls 👈👈👈\n",
+    "        self.smooth = change[\"new\"][\"smoothing\"] is not None\n",
+    "\n",
+    "        # 👉👉👉 Only calculate smoothing column if smoothing is turned on 👈👈👈\n",
+    "        if self.smooth:\n",
+    "            self.window_size = change[\"new\"][\"smoothing\"][\"window_size\"]\n",
+    "            self.polynomial_order = change[\"new\"][\"smoothing\"][\"polynomial_order\"]\n",
+    "        \n",
+    "            self.original_data['Savitzky-Golay'] = savgol_filter(\n",
+    "                self.original_data['Temperature'], \n",
+    "                self.window_size, \n",
+    "                self.polynomial_order\n",
+    "            )\n",
+    "        self.year_range = change[\"new\"][\"year_range\"]\n",
+    "        \n",
+    "        self.selected = (\n",
+    "            self.original_data[(self.original_data['Year'] >= self.year_range[0]) & \n",
+    "                               (self.original_data['Year'] <= self.year_range[1])]\n",
+    "        )\n",
+    "        self.display_plot()\n",
+    "        self.display_data()\n",
+    "\n",
+    "    def display_plot(self): \n",
+    "        # This plotting function is copied from the first \n",
+    "        # version of the dashboard.\n",
+    "        self.plot_output.clear_output(wait=True) \n",
+    "        with self.plot_output: \n",
+    "            plt.xlabel('Year') \n",
+    "            plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)') \n",
+    "            plt.title('Global Annual Mean Surface Air Temperature Change')\n",
+    "            plt.plot(self.selected['Year'], self.selected['Temperature'], label='Raw Data') \n",
+    "            # 👉👉👉 Only plot smoothing if it is turned on 👈👈👈\n",
+    "            if self.smooth:\n",
+    "                plt.plot(self.selected['Year'], self.selected['Savitzky-Golay'], label='Smoothed Data') \n",
+    "            plt.legend()\n",
+    "            plt.show() \n",
+    "\n",
+    "    def display_data(self):\n",
+    "        self.data_output.data = self.selected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4d120bd-fad7-43be-b40e-2c3154d32cd2",
+   "metadata": {},
+   "source": [
+    "### Step 6: build the dashboard\n",
+    "\n",
+    "The code below is copy/pasted from `key/dashboard_pydantic/mail.py` with almost no modification. Only some import statements have been removed, and one line added to import the text boxes and some constants from the pydantic dashboard."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534b6039-7f16-4671-bfab-6521b87654ac",
+   "id": "f1d3caa6-b2c4-4c63-a068-4ee18513fb9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "# 👉👉👉 Get the unmodifed widgets from the pydantic version of the dashboard 👈👈👈\n",
+    "from key.dashboard_pydantic.widgets_classes import TextBoxes, DATA_DIR, DATA_FILE\n",
+    "\n",
+    "from pathlib import Path\n",
+    "# Create a VBox to hold the description and control widgets\n",
+    "desc_and_ctrl_box = widgets.VBox()\n",
+    "\n",
+    "# Add a vertical box holding both table and plot visualizations of selected data\n",
+    "data_box = widgets.VBox()\n",
+    "\n",
+    "# The entire widget\n",
+    "main_widget = widgets.HBox(children = (desc_and_ctrl_box, data_box))\n",
+    "\n",
+    "\n",
+    "data_and_plot = DataAndPlot()\n",
+    "text_boxes = TextBoxes()\n",
+    "\n",
+    "data_accordion = widgets.Accordion(children=(data_and_plot.data_output,), titles=(\"Selected Data\",))\n",
+    "desc_and_ctrl_box.children = (text_boxes, controls)\n",
+    "data_box.children = (data_accordion, data_and_plot.plot_output)\n",
+    "\n",
+    "\n",
+    "source = (controls, \"_value\")\n",
+    "target = (data_and_plot, \"smoothing_info\")\n",
+    "link = widgets.link(source, target)\n",
+    "\n",
+    "for widget in controls.di_widgets.values():\n",
+    "    widget.layout.max_width = \"250px\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c9e977f-13a3-4d90-bb6b-ef32e6916c11",
+   "id": "e390f0f2-c271-4aaa-af02-8b1f5cd1318e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89dc8e73-a42d-48b5-972c-84d76d7a8951",
+   "metadata": {},
+   "source": [
+    "## Try out the `ipyautoui` demo\n",
+    "\n",
+    "The easiest way to get a better idea of what ipyautoui can do is to try out its demo. If you have time, feel free to explore!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "165c26b6-020f-446e-afff-8d236124d12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipyautoui import demo\n",
+    "demo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0483d911-871b-421a-b90c-22e31b9a5f0a",
+   "metadata": {},
+   "source": [
+    "## Anatomy of an AutoUi widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bec4f05-8dfb-4f01-9071-e1f34705b06d",
    "metadata": {},
    "outputs": [],
    "source": []
