Apply suggestions from code review
Co-authored-by: Juan Cabanela <cabanela@mnstate.edu>

--- a/03e_more_ipyautoui_pydantic.ipynb
+++ b/03e_more_ipyautoui_pydantic.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "controls = AutoUi(DataSelector)\n",
+    "controls = AutoUi(DataSelectorModel)\n",
     "controls"
    ]
   },
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dashboard_pydantic.widgets_autoui import make_enforcer\n",
+    "from key.dashboard_pydantic.widgets_autoui import make_enforcer\n",
     "controls.observe(make_enforcer(controls), \"_value\")"
    ]
   },
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 👉👉👉 Get the unmodifed widgets from the pydantic version of the dashboard 👈👈👈\n",
+    "# 👉👉👉 Get the unmodified widgets from the pydantic version of the dashboard 👈👈👈\n",
     "from key.dashboard_pydantic.widgets_classes import TextBoxes, DATA_DIR, DATA_FILE\n",
     "\n",
     "from pathlib import Path\n",
