Add missing comma

--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %answer key/03b/01.py\n"
+    "# %answer key/03b/01.py\n",
     "\n",
     "from pydantic import BaseModel\n",
     "\n",
