Add standard sections at the top of the notebook

--- a/03c_other_dashboard_elements.ipynb
+++ b/03c_other_dashboard_elements.ipynb
@@ -5,17 +5,19 @@
    "id": "1e6ad593-4cd7-42c7-9502-9e0f8fd9f3b1",
    "metadata": {},
    "source": [
-    "# Finishing up this iteration of the dashboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c513deb9-cb03-4d01-8f3b-f8739e47f16e",
-   "metadata": {},
-   "source": [
+    "# Finishing up this iteration of the dashboard\n",
+    "\n",
+    "### Goal of this notebook \n",
+    "\n",
     "All of this is great, but so far we have only made the controls for the dashboard. In this section we will finish up the rest.\n",
     "\n",
-    "We will mostly use the code from the earlier iteration of the dashboard, with the change that we will wrap the user elements inside of a class."
+    "We will mostly use the code from the earlier iteration of the dashboard, with the change that we will wrap the user elements inside of a class.\n",
+    "\n",
+    "### Steps you will take in this notebook\n",
+    "\n",
+    "1. Recreate the text widgets for the dashboard, this time as a class.\n",
+    "2. Make a class to hold the data table display and graph.\n",
+    "3. Explore one of the tricky bits of working with widget values that are mutable."
    ]
   },
   {
