Add standard header stuff

--- a/03e_more_ipyautoui_pydantic.ipynb
+++ b/03e_more_ipyautoui_pydantic.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# Further exploration of ipyautoui\n",
     "\n",
-    "**NOTE:** We will not export the content in this notebook to a Python module with nbdev."
+    "**NOTE:** We will not export the content in this notebook to a Python module with nbdev.\n",
+    "\n",
+    "### Goal of this notebook \n",
+    "\n",
+    "This notebook contains a few additional discussion and examples of using ipyautoui. One is to demonstrate that is relatively straightforward to modify the dashboard when built in a more modular way.\n",
+    "\n",
+    "### Steps you will take in this notebook\n",
+    "\n",
+    "1. Make the calculation and display of the smoothing optional.\n",
+    "2. Explore more of what `ipyautoui` can do."
    ]
   },
   {
