Add headers and better outline of notebook

--- a/03d_dashboard2.ipynb
+++ b/03d_dashboard2.ipynb
@@ -5,7 +5,16 @@
    "id": "5e8831f5-5b28-4590-b268-c018e4c99c06",
    "metadata": {},
    "source": [
-    "# Assemble the dashboard"
+    "# Assemble the dashboard\n",
+    "\n",
+    "### Goal of this notebook \n",
+    "\n",
+    "We will assemble the pieces from the previous notebooks into a dashboard.\n",
+    "\n",
+    "### Steps you will take in this notebook\n",
+    "\n",
+    "1. Import the widgets from `dashboard_pydantic`.\n",
+    "2. Compose them into the dashboard."
    ]
   },
   {
@@ -38,6 +47,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f235f67-8b27-40c1-98c0-a003bb544d50",
+   "metadata": {},
+   "source": [
+    "## Import our widgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2280bdee-647f-4740-9f54-96e6aa90f440",
    "metadata": {},
    "source": [
@@ -56,6 +73,14 @@
     "\n",
     "from dashboard_pydantic.widgets_autoui import controls\n",
     "from dashboard_pydantic.widgets_classes import DataAndPlot, TextBoxes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f3085c-7382-4caf-8bbd-13b5c72448c9",
+   "metadata": {},
+   "source": [
+    "## Create the framework of our dashboard"
    ]
   },
   {
@@ -107,6 +132,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f403561d-15a1-4434-8fa5-d03ac1d73d79",
+   "metadata": {},
+   "source": [
+    "## Make instances of the dashboard widgets and place them in containers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "23587e62-9e05-4bb0-8b1a-5be12aeed12c",
    "metadata": {},
    "source": [
@@ -132,6 +165,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0aefe02-f30e-43cd-8e0d-9ba466cd7382",
+   "metadata": {},
+   "source": [
+    "## Connect the widgets using `link`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "900f8139-660a-4963-b498-47976adf71ee",
    "metadata": {},
    "source": [
@@ -152,6 +193,14 @@
     "source = (controls, \"_value\")\n",
     "target = (data_and_plot, \"smoothing_info\")\n",
     "link = widgets.link(source, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff712ada-8961-4509-b7be-4fd03bcd3799",
+   "metadata": {},
+   "source": [
+    "## Do some formating"
    ]
   },
   {
