--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -55,9 +55,11 @@
     "\n",
     "- **Who are we?**\n",
     "- **Who are you?**\n",
-    "    - Who here has a workflow in a Jupyter Notebook?\n",
-    "    - What domains are you from?\n",
-    "    - Do you consider yourself a researcher? Developer? Something else?\n",
+    "    - **Introduce yourself to the people near you and get ready to answer these questions:**\n",
+    "        - Have you worked in a Jupyter Notebook?\n",
+    "        - What domains are you from?\n",
+    "        - Do you consider yourself a researcher? Developer? Something else?\n",
+    "        - What do you hope to get out of this tutorial.\n",
     "- **What are you familiar with already?**\n",
     "    - Python\n",
     "    - Jupyter\n",
@@ -106,12 +108,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
