Address review comments from #5

--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -16,15 +16,7 @@
     "1. Make a widget from a simple Pydantic model using ipyautoui.\n",
     "2. Learn some of the differences between an ipyautoui-created widget and one you make yourself.\n",
     "3. Implement the data selector for the dashboard, suppressing display of unnecessary elements.\n",
-    "4. Address handling constraints for user interface elements.\n",
-    "\n",
-    "### TO DO IN THIS NOTEBOOK\n",
-    "- [x] Add a brief description of the package and its history?\n",
-    "- [x] Show how to use ipyautoui to create a simple settings panel relatively quickly\n",
-    "  - [ ] Mention the active development of the package and the fact that it is still a bit buggy\n",
-    "  - [x] Mention other features of Pydantic that may be relevant to our dashboard\n",
-    "- [ ] Have them replace existing settings widgets with control widget generated with ipyautoui\n",
-    "- [ ] Connect new control widget to dashboard"
+    "4. Address handling constraints for user interface elements."
    ]
   },
   {
@@ -602,9 +594,14 @@
     "        \"\"\"\n",
     "        try:\n",
     "            # Every AutoUi widget has a copy of the model class\n",
-    "            # We'll try validating the value in change[\"new\"] and see if it works\n",
+    "            # We'll try validating the value in change[\"new\"] and see if it works.\n",
+    "            # If the model is valid, we do not need to do anything. The case where the \n",
+    "            # model is invalid, which means we need to reset the UI to the last valid\n",
+    "            # settings, is handled in the except clause below.\n",
     "            ui.model.model_validate(change[\"new\"])\n",
     "        except ValidationError:\n",
+    "            # ⚠️ This is what resets the value of the widget if the user has entered an\n",
+    "            #    invalid combination of values.\n",
     "            # That failed, so reset the ui to the old value\n",
     "            ui.value = change[\"old\"]\n",
     "\n",
