Add initial dashboard display with solara

--- a/04c_solara.ipynb
+++ b/04c_solara.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp main "
+    "#| default_exp app "
    ]
   },
   {
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print one of the values -- just like for an ipywidgete you use .value\n",
+    "# Print one of the values -- just like for an ipywidgets you use .value\n",
     "print(year_range.value)"
    ]
   },
@@ -314,7 +314,7 @@
     "        # is available that the first column doesn't use.\n",
     "        with solara.Column():\n",
     "            # Display the data. The Details component is a collapsible component sort of like\n",
-    "            # an accordian. Its child is an ipydatagrid.DataGrid, like we used previously.\n",
+    "            # an accordion. Its child is an ipydatagrid.DataGrid, like we used previously.\n",
     "            # There is another option built in to solara called solara.DataFrame with similar \n",
     "            # functionality.\n",
     "            solara.Details(\n",
@@ -358,6 +358,19 @@
     "from nbdev.export import nb_export\n",
     "\n",
     "nb_export('04c_solara.ipynb', 'dashboard_solara')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Displaying the dashboard with solara\n",
+    "\n",
+    "Solara includes both the Python framework for writing widgets that we have talked about and a server for displaying notebooks. Copy/paste this into a terminal to run this dashboaard using solara:\n",
+    "\n",
+    "```bash\n",
+    "solara run 04c_solara.ipynb\n",
+    "```"
    ]
   },
   {
